--- a/i18n/en-gb.toml
+++ b/i18n/en-gb.toml
@@ -476,7 +476,7 @@ other = "Real-time tips, analysis, and insights. elevate your game with expert a
 other = "See all Authors"
 
 [footer_description]
-other = "TipXArea is the next-generation sports social platform. We continually innovate to elevate the betting experience by blending real-time social interaction with deep market insights. Enjoy the community fun while embracing a professional investment mindset.Stop Betting, Start Investing."
+other = "AllMoneyBackToMe is the next-generation sports social platform. We continually innovate to elevate the betting experience by blending real-time social interaction with deep market insights. Enjoy the community fun while embracing a professional investment mindset.Stop Betting, Start Investing."
 
 [authors_section_title]
 other= "Meet our Authors"
