--- a/i18n/zh-hant.toml
+++ b/i18n/zh-hant.toml
@@ -458,7 +458,7 @@ other = "即時消息，專業市場思維，讓你在競賽中贏得先機"
 
 
 [footer_description]
-other = "TipXarea 新世代體育社交平台，我們不斷創新提升體彩體驗，融合即時社交互動與深度市場洞察，讓玩家享受社群樂趣的同時，掌握專業投資思維．Stop Betting, Start Investing"
+other = "AllMoneyBackToMe 新世代體育社交平台，我們不斷創新提升體彩體驗，融合即時社交互動與深度市場洞察，讓玩家享受社群樂趣的同時，掌握專業投資思維．Stop Betting, Start Investing"
 
 [authors_section_title]
 other= "編輯群"
